--- a/PROJECTS/MAJOR/css/style.css
+++ b/PROJECTS/MAJOR/css/style.css
@@ -86,7 +86,7 @@ li {
     .section-contact
   )
   .container:first-child {
-  padding: 6.4rem 0 0.2rem 0;
+  padding: 6.4rem 2.4rem 0.2rem 2.4rem;
 }
 
 .grid {
@@ -178,7 +178,7 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.8rem 0;
+  padding: 1.8rem 2.4rem;
 }
 
 .section-navbar .navbar ul {
@@ -283,7 +283,7 @@ main {
   position: relative;
   display: block;
   width: calc(100% + 1.3px);
-  height: 80px;
+  height: 12rem;
 }
 
 .custom-shape-divider-bottom-1702667069 .shape-fill {
@@ -715,3 +715,161 @@ footer .grid {
 input:focus-visible ,textarea:focus-visible {
     outline: .1rem solid var(--main-color);
 }
+
+/***** Start Media queries Section *****/
+
+@media (width <= 1400px) {
+  html {
+    font-size: 56.25%;
+  }
+
+  .section-hero {
+    width: 90%;
+  }
+  
+}
+
+@media (width <= 1220px) {
+  html {
+    font-size: 54%;
+  }
+
+  :is(
+    .section-about,
+    .section-blog,
+    .section-course,
+    .section-contact--homepage,
+    .section-why--choose
+  ) .grid {
+    gap: 6.4rem;
+  }
+}
+
+@media (width <= 1100px) {
+  :is(.section-course,.section-blog) .grid-four--cols {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+
+  .section-why--choose {
+
+    & .choose-left--div {
+      order: 2;
+    }
+
+    & .choose-right--div {
+      order: 3;
+    }
+
+    & .choose-center--div {
+      order: 1;
+
+      & figure::before {
+        width: 0;
+        height: 0;
+        background-color: transparent;
+        padding: 0;
+      }
+
+      & figure::after{
+        width: 0;
+        height: 0;
+        background-color: transparent;
+        padding: 0;
+      }
+    }
+  }
+}
+
+@media (width <= 998px) {
+  .section-hero {
+    height: auto;
+    padding-bottom: 5rem;
+
+    & .grid-two--cols {
+      grid-template-columns: 1fr;
+
+      & .section-hero--content {
+        order: 2;
+      }
+      
+      & .section-hero--image {
+        order: 1;
+
+        & img {
+          width: 50%;
+        }
+      }
+    }
+  }
+
+  .section-about .about-div{
+    text-align: left;
+  }
+
+  footer .grid-four--cols {
+    grid-template-columns: repeat(3,minmax(100px, 1fr));
+    text-align: left;
+
+    & .footer-1--div{
+      grid-row: 2/3;
+      grid-column: 1/-1;
+      margin-top: 6.4rem;
+    }
+  }
+}
+
+@media (width <= 768px) {
+  .grid-two--cols,
+  .grid-three--cols {
+    grid-template-columns: 1fr;
+  }
+
+  .section-navbar .container {
+    display: flex;
+    flex-direction: column;
+
+    & ,.navbar ul {
+      gap: 2.4rem;
+    }
+
+    & .navbar-brand {
+      text-align: center;
+      margin-bottom: 2.4rem;
+    }
+  }
+
+  .section-hero .grid .hero-heading {
+    font-size: 3.8rem;
+  }
+
+
+  .section-why--choose {
+    & img {
+      width: 30%;
+    }
+
+    & .grid {
+      gap: 1.4rem;
+    }
+
+    & .text-align--right .why-choose--div {
+      align-items: start;
+      text-align: left;
+    }
+  }
+
+  .section-contact--homepage .btn {
+    display: block;
+    text-align: center;
+  }
+
+  .contact-title{
+    font-size: 2.4rem;
+  }
+  
+  :is(.section-contact--homepage) .container:first-child {
+    padding: 6.4rem 0rem 2.4rem 0rem;
+  }
+}
+
+/***** End Media queries Section *****/
